crates/serde-feather/tests/ui/enum_variant_attribute.rs
use serde_feather::FeatherSerialize;

#[derive(FeatherSerialize)]
enum Shape {
    #[serde(skip_serializing)]
    Circle,
}

fn main() {}
